# create-sds-app

./: .eslintrc-override.js  .gitignore  CLAUDE.md  FASTAPI_TYPESCRIPT_TYPES.md  README.md  auth.ts  docker-compose.yml  middleware.ts  package.json  tsconfig.json
.claude/: settings.json
.claude/hooks/: run-checks.sh
.github/workflows/: ci.yml
app/: layout.tsx  page.tsx  style.ts
app/api/auth/callback/: route.ts
app/api/auth/login/: route.ts
app/api/auth/session/: route.ts
app/common/: BProgressProvider.tsx  CustomThemeProvider.tsx  theme.ts
app/form-generator/: page.tsx
app/form-generator/[modelName]/: page.tsx
app/lib/: actions.ts  auth-utils.ts  constants.ts  hooks.ts  mock-data.ts  utils.ts
client/: .eslintrc.js  auth.ts  package.json  tailwind.config.js
client/app/: layout.tsx  page.tsx
client/app/api/auth/[...nextauth]/: route.ts
client/app/common/: CustomThemeProvider.tsx  biohubOverrides.ts
client/components/: AddItemForm.tsx  ItemsList.tsx  ItemsPage.tsx  MockSignInButton.tsx  NavBarAndFooter.tsx  actions.ts  sign-in.tsx  sign-out.tsx
client/db/: index.ts
client/docs/: SDS Tailwind.json  SDS UI Components Documentation for AI.md
client/src/api/: client.ts
components/: MockSignInButton.tsx  NavBarAndFooter.tsx  sign-in.tsx  sign-out.tsx
db/: index.ts
db/schema/: index.ts
docs/: SDS UI Components Documentation for AI.md
lib/form-generator/: form-generator.tsx  model-schemas.ts  schema-utils.ts
server/: database.py  main.py  models.py  package.json  pyproject.toml
